<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/codeGet"
            style="@style/AppTheme.Code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AppTheme.CodeBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_get" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/find_out_more" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/codeGetAns"
            style="@style/AppTheme.Code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AppTheme.CodeBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_get_ans" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/codeGetGps"
            style="@style/AppTheme.Code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AppTheme.CodeBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_getgps" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/codeGetGpsAns"
            style="@style/AppTheme.Code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AppTheme.CodeBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_getgps_ans" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/codeVibrate"
            style="@style/AppTheme.Code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AppTheme.CodeBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_vibrate" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/no_answer" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>
</ScrollView>